WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181563
We should be able to terminate service workers that are unresponsive
https://bugs.webkit.org/show_bug.cgi?id=181563
Summary
We should be able to terminate service workers that are unresponsive
Chris Dumez
Reported
2018-01-11 16:07:47 PST
We should be able to terminate service workers that are unresponsive (e.g. in a tight loop).
Attachments
WIP Patch
(8.49 KB, patch)
2018-01-12 16:50 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
WIP Patch
(4.26 KB, patch)
2018-01-12 17:04 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(14.92 KB, patch)
2018-01-17 15:57 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2018-01-11 16:08:02 PST
<
rdar://problem/35280031
>
Chris Dumez
Comment 2
2018-01-12 16:50:45 PST
Created
attachment 331255
[details]
WIP Patch
Chris Dumez
Comment 3
2018-01-12 17:04:23 PST
Created
attachment 331257
[details]
WIP Patch
EWS Watchlist
Comment 4
2018-01-12 17:07:14 PST
Attachment 331257
[details]
did not pass style-queue: ERROR: Source/WebCore/workers/service/context/SWContextManager.cpp:29: Found other header before a header this file implements. Should be: config.h, primary header, blank line, and then alphabetically sorted. [build/include_order] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Chris Dumez
Comment 5
2018-01-17 15:57:05 PST
Created
attachment 331551
[details]
Patch
Chris Dumez
Comment 6
2018-01-18 15:55:25 PST
ping review?
Alex Christensen
Comment 7
2018-01-18 16:33:36 PST
This has the side effect of terminating all service workers
Chris Dumez
Comment 8
2018-01-18 16:34:32 PST
(In reply to Alex Christensen from
comment #7
)
> This has the side effect of terminating all service workers
Yes, there is no other way and this is fine. We already deal properly with the SW process crashing and we restart those service workers as needed.
WebKit Commit Bot
Comment 9
2018-01-18 16:57:46 PST
Comment on
attachment 331551
[details]
Patch Clearing flags on attachment: 331551 Committed
r227174
: <
https://trac.webkit.org/changeset/227174
>
WebKit Commit Bot
Comment 10
2018-01-18 16:57:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug