LayoutTests/http/tests/workers/service/resources/postmessage-echo-worker-mayhang.js
@@ -1,0 +1,8 @@
+self.addEventListener("message", (event) => {
+    event.source.postMessage("PASS: Service worker received message '" + event.data + "'");
+
+    if (event.data === "HANG") {
+        while(1) { };
+    }
+});
+
